feat: se mejoran las vistas

--- a/src/app/management/dashboard/dashboard.component.html
+++ b/src/app/management/dashboard/dashboard.component.html
@@ -1,1 +1,2 @@
-<p class="">dashboard works!</p>
+<img class="w-full h-full bg-no-repeat bg-cover bg-center" ngSrc="./assets/img/05-beneficio.png" alt="" width="400"
+  height="200" priority>
