--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -3,8 +3,7 @@
     <div
       class="w-full bg-white rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800 dark:border-gray-700">
       <div class="p-6 space-y-4 md:space-y-6 sm:p-8">
-        <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">Beneficio
-          Café</h1>
+        <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">Login</h1>
         <form [formGroup]="form" class="space-y-4 md:space-y-6">
           <mat-label class="block text-sm font-medium text-gray-900 dark:text-white">Username</mat-label>
           <mat-form-field appearance="outline" class="w-full">
