--- a/src/app/management/agricultor/agricultor.component.html
+++ b/src/app/management/agricultor/agricultor.component.html
@@ -1,1 +1,9 @@
-<p>agricultor works!</p>
+<div class="flex justify-center items-center mt-2">
+  <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">
+    Opciones de Agricultor</h1>
+  <button type="button"
+    class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center mr-3 md:mr-0 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800 mx-4"
+    (click)="test()">Test Agricultor</button>
+
+  <p class="mx-4">{{res$ | async}}</p>
+</div>
