--- a/src/app/management/header/header.component.html
+++ b/src/app/management/header/header.component.html
@@ -1,6 +1,8 @@
-<nav class="bg-white border-gray-200 dark:bg-gray-900">
+<nav class="bg-white border-gray-200 dark:bg-gray-900 sticky top-0">
   <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
     <div class="w-full md:block md:w-auto" id="navbar-default">
+      <p class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">{{name |
+        uppercase}}</p>
       <ul
         class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
         <li>
@@ -28,3 +30,7 @@
       (click)="logout()">Salir</button>
   </div>
 </nav>
+<div class="h-14 bg-gradient-to-r from-cyan-500 to-blue-500 flex justify-center items-center">
+  <h1 class="text-xl font-bold leading-tight tracking-tight text-cyan-100 md:text-2xl dark:text-white">
+    Bienvenido a Beneficio Café</h1>
+</div>
