feat: se agregan mas validaciones

--- a/src/app/management/header/header.component.html
+++ b/src/app/management/header/header.component.html
@@ -30,7 +30,7 @@
       (click)="logout()">Salir</button>
   </div>
 </nav>
-<div class="h-14 bg-gradient-to-r from-cyan-500 to-blue-500 flex justify-center items-center">
+<!-- <div class="h-14 bg-gradient-to-r from-cyan-500 to-blue-500 flex justify-center items-center">
   <h1 class="text-xl font-bold leading-tight tracking-tight text-cyan-100 md:text-2xl dark:text-white">
     Bienvenido a Beneficio Café</h1>
-</div>
+</div> -->
