--- a/src/app/management/beneficio/beneficio.component.html
+++ b/src/app/management/beneficio/beneficio.component.html
@@ -1,8 +1,22 @@
 <div class="flex justify-center items-center mt-2">
   <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">
     Opciones de Beneficio</h1>
-  <button type="button"
+  <!-- <button type="button"
     class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center mr-3 md:mr-0 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800 mx-4"
     (click)="test()">Test Beneficio</button>
-  <p class="mx-4">{{res$ | async}}</p>
+  <p class="mx-4">{{res$ | async}}</p> -->
 </div>
+<mat-sidenav-container>
+  <mat-sidenav [(opened)]="opened" mode="side">
+    <mat-list>
+      <mat-list-item><a routerLink="solicitud">Solicitud</a></mat-list-item>
+      <mat-list-item><a routerLink="cuenta">Cuenta</a></mat-list-item>
+    </mat-list>
+  </mat-sidenav>
+  <mat-sidenav-content>
+    <button mat-icon-button (click)="opened=!opened"> <mat-icon>menu</mat-icon></button>
+    <main>
+      <router-outlet></router-outlet>
+    </main>
+  </mat-sidenav-content>
+</mat-sidenav-container>
