feat: se agregan mas pantallas

--- a/src/app/management/agricultor/components/cuenta/cuenta.component.html
+++ b/src/app/management/agricultor/components/cuenta/cuenta.component.html
@@ -1,2 +1,10 @@
-<!-- <button mat-raised-button class="mx-3" (click)="openCrearCuenta()" >Crear Cuenta</button> -->
-<button mat-raised-button class="mx-3">Ver Cuentas</button>
+<ng-container *ngIf="showBtn$ | async; else Loading">
+  <button mat-raised-button class="mx-3" (click)="verCuentas()" >Ver Cuentas</button>
+  <div class="my-5">
+    <app-mat-table [tableColumns]="tableCols" [headerText]="hText" [tableData]="tableData">
+    </app-mat-table>
+  </div>
+</ng-container>
+<ng-template #Loading>
+  <span>NO TIENE CUENTAS REGISTRADAS</span>
+</ng-template>
