--- a/src/app/management/agricultor/components/solicitud/solicitud.component.html
+++ b/src/app/management/agricultor/components/solicitud/solicitud.component.html
@@ -9,5 +9,5 @@
   </div>
 </ng-container>
 <ng-template #Loading>
-  <span>NO CUENTA CON SOLICITUDES</span>
+  <span>NO TIENE SOLICITUDES REGISTRADAS</span>
 </ng-template>
