--- a/src/app/management/agricultor/components/modals/crear-solicitud/crear-solicitud.component.html
+++ b/src/app/management/agricultor/components/modals/crear-solicitud/crear-solicitud.component.html
@@ -6,7 +6,7 @@
     <mat-form-field appearance="outline" class="w-full">
       <input matInput type="text" class="outline-0 focus:ring-0 text-center font-black"formControlName="tipoSolicitud" >
     </mat-form-field>
-    <mat-label class="block text-sm font-medium text-gray-900 dark:text-white">Peso Total</mat-label>
+    <mat-label class="block text-sm font-medium text-gray-900 dark:text-white">Peso Total (Toneladas)</mat-label>
     <mat-form-field appearance="outline" class="w-full">
       <input matInput type="text" class="outline-0 focus:ring-0" formControlName="pesoTotal">
     </mat-form-field>
