--- a/src/app/management/agricultor/components/cuenta/cuenta.component.html
+++ b/src/app/management/agricultor/components/cuenta/cuenta.component.html
@@ -1,3 +1,4 @@
+<ngx-spinner type="ball-scale-multiple"></ngx-spinner>
 <ng-container *ngIf="showBtn$ | async; else Loading">
   <button mat-raised-button class="mx-3" (click)="verCuentas()" >Ver Cuentas</button>
   <div class="my-5">
