--- a/src/app/management/agricultor/components/parcialidad/parcialidad.component.html
+++ b/src/app/management/agricultor/components/parcialidad/parcialidad.component.html
@@ -1,4 +1,5 @@
-<button mat-raised-button class="mx-3">Crear Parcialidad</button>
+<ngx-spinner type="ball-scale-multiple"></ngx-spinner>
+<button mat-raised-button class="mx-3" (click)="crearParcialidad()" >Crear Parcialidad</button>
 <ng-container *ngIf="showBtn$ | async; else Loading">
   <button mat-raised-button (click)="verParcialidades()">Ver Parcialidades</button>
   <div class="my-5">
