--- a/src/app/management/mat-table/mat-table.component.html
+++ b/src/app/management/mat-table/mat-table.component.html
@@ -15,3 +15,5 @@
   <mat-paginator [pageSizeOptions]="[5, 10, 15, 20]" showFirstLastButtons>
   </mat-paginator>
 </mat-card-content>
+
+<button mat-button (click)="openDialog()">Abrir Modal</button>
