--- a/src/app/management/mat-table/mat-table.component.html
+++ b/src/app/management/mat-table/mat-table.component.html
@@ -1,11 +1,20 @@
 <!--* TABLA GENERICA -->
 <mat-card-content class="mat-elevation-z2">
-  <table mat-table [dataSource]="tableDataSrc" matSort matSortDisabled class="table-auto">
-    <ng-container *ngFor="let col of tableCols; index as i" matColumnDef="{{ col }}">
+  <table mat-table [dataSource]="tableDataSrc" matSort matSortDisabled
+    class="table-auto">
+    <ng-container *ngFor="let col of tableCols; index as i"
+      matColumnDef="{{ col }}">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ headerText[i] |
         uppercase }}
       </th>
       <td mat-cell *matCellDef="let profile">{{ profile[col] | uppercase }}
+
+        <div *ngIf="col === 'licenciaPiloto'">
+          <a class="mouse text-blue-500 hover:text-blue-700"
+            (click)="obtenerGestion(profile['object'])">{{profile['qrlicencia']
+            | uppercase}}</a>
+        </div>
+
       </td>
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="tableCols; sticky: true"></tr>
@@ -15,5 +24,3 @@
   <mat-paginator [pageSizeOptions]="[5, 10, 15, 20]" showFirstLastButtons>
   </mat-paginator>
 </mat-card-content>
-
-<button mat-button (click)="openDialog()">Abrir Modal</button>
