--- a/src/app/management/agricultor/components/modals/crear-solicitud/crear-solicitud.component.html
+++ b/src/app/management/agricultor/components/modals/crear-solicitud/crear-solicitud.component.html
@@ -3,8 +3,8 @@
   </h1>
   <form [formGroup]="form" class="space-y-4 md:space-y-6">
     <mat-label class="block text-sm font-medium text-gray-900 dark:text-white">Tipo de Solicitud</mat-label>
-    <mat-form-field appearance="outline" class="w-full">
-      <input matInput type="text" class="outline-0 focus:ring-0 text-center font-black"formControlName="tipoSolicitud" >
+    <mat-form-field appearance="outline" class="w-full font-black">
+      <input matInput type="text" class="outline-0 focus:ring-0 text-center"formControlName="tipoSolicitud" >
     </mat-form-field>
     <mat-label class="block text-sm font-medium text-gray-900 dark:text-white">Peso Total (Toneladas)</mat-label>
     <mat-form-field appearance="outline" class="w-full">
