--- a/src/app/management/peso-cabal/components/parcialidad-pc/parcialidad-pc.component.html
+++ b/src/app/management/peso-cabal/components/parcialidad-pc/parcialidad-pc.component.html
@@ -1,1 +1,15 @@
-<p>parcialidad-pc works!</p>
+<ngx-spinner type="ball-scale-multiple"></ngx-spinner>
+<button mat-raised-button class="mx-3" (click)="registrarParcialidad()">Registrar Parcialidad</button>
+<section class="mx-3 my-3">
+  <form [formGroup]="form" class="space-y-4 md:space-y-6">
+    <mat-label class="block text-sm font-medium text-gray-900 dark:text-white">No. Cuenta</mat-label>
+    <mat-form-field appearance="outline" class="w-full uppercase">
+      <input matInput type="text" class="outline-0 focus:ring-0 text-center" maxlength="25" formControlName="noCuenta">
+    </mat-form-field>
+    <button mat-raised-button class="mx-3" [disabled]="form.invalid" (click)="buscar()">Buscar Cuenta</button>
+  </form>
+</section>
+<div class="my-5">
+  <app-mat-table [tableColumns]="tableCols" [headerText]="hText" [tableData]="tableData">
+  </app-mat-table>
+</div>
