feat: se integran metodos para hcaptcha

--- a/src/app/auth/hcaptcha/hcaptcha.component.html
+++ b/src/app/auth/hcaptcha/hcaptcha.component.html
@@ -1,1 +1,3 @@
-<ng-hcaptcha (verify)="onVerify($event)" (expired)="onExpired($event)" (error)="onError($event)"></ng-hcaptcha>
+<mat-dialog-content>
+  <ng-hcaptcha (verify)="onVerify($event)" (expired)="onExpired($event)" (error)="onError($event)"></ng-hcaptcha>
+</mat-dialog-content>
