--- a/src/app/management/beneficio/components/cuenta-bc/cuenta-bc.component.html
+++ b/src/app/management/beneficio/components/cuenta-bc/cuenta-bc.component.html
@@ -1,1 +1,13 @@
-<p>cuenta-bc works!</p>
+<ngx-spinner type="ball-scale-multiple"></ngx-spinner>
+<ng-container *ngIf="showBtn$ | async; else Loading">
+  <button mat-raised-button class="mx-3" (click)="verCuentas()">Ver Cuentas</button>
+  <button mat-raised-button class="mx-3" *ngIf="showTable" (click)="cerrarCuenta()">Cerrar Cuenta</button>
+  <button mat-raised-button class="mx-3" *ngIf="showTable" (click)="confirmarCuenta()">Confirmar Cuenta</button>
+  <div class="my-5" *ngIf="showTable">
+    <app-mat-table [tableColumns]="tableCols" [headerText]="hText" [tableData]="tableData">
+    </app-mat-table>
+  </div>
+</ng-container>
+<ng-template #Loading>
+  <span class="mx-3">NO HAY CUENTAS PARA CERRAR O CONFIRMAR </span>
+</ng-template>
