--- a/src/app/auth/approve-entry/approve-entry.component.html
+++ b/src/app/auth/approve-entry/approve-entry.component.html
@@ -1,1 +1,18 @@
-<p>approve-entry works!</p>
+<ng-container *ngIf="showContainer">
+  <div class="flex h-screen">
+    <div class="m-auto border-solid border-2 border-green-500">
+      <div class="p-5">
+        <div class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">No.
+          {{noCuenta}}
+        </div>
+        <div class="my-5" *ngIf="showTable">
+          <app-mat-table [tableColumns]="tableCols" [headerText]="hText" [tableData]="tableData">
+          </app-mat-table>
+          <div class="text-center my-5">
+            <button mat-raised-button (click)="permitirIngreso()">Permitir Ingreso</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</ng-container>
