--- a/src/app/management/agricultor/components/cuenta/cuenta.component.html
+++ b/src/app/management/agricultor/components/cuenta/cuenta.component.html
@@ -1,7 +1,7 @@
 <ngx-spinner type="ball-scale-multiple"></ngx-spinner>
 <ng-container *ngIf="showBtn$ | async; else Loading">
-  <button mat-raised-button (click)="verCuentas()" >Ver Cuentas</button>
-  <div class="my-5">
+  <button mat-raised-button class="mx-3" (click)="verCuentas()" >Ver Cuentas</button>
+  <div class="my-5" *ngIf="showTable">
     <app-mat-table [tableColumns]="tableCols" [headerText]="hText" [tableData]="tableData">
     </app-mat-table>
   </div>
