feat: se cambia nombre a secret key

--- a/src/app/auth/approve-entry/approve-entry.component.html
+++ b/src/app/auth/approve-entry/approve-entry.component.html
@@ -1,3 +1,4 @@
+<ngx-spinner type="ball-scale-multiple"></ngx-spinner>
 <ng-container *ngIf="showContainer">
   <div class="flex h-screen">
     <div class="m-auto border-solid border-2 border-green-500">
