--- a/src/app/management/agricultor/components/modals/crear-parcialidad/crear-parcialidad.component.html
+++ b/src/app/management/agricultor/components/modals/crear-parcialidad/crear-parcialidad.component.html
@@ -1,3 +1,4 @@
+<ngx-spinner type="ball-scale-multiple"></ngx-spinner>
 <mat-dialog-content>
   <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">Crear Parcialidad
   </h1>
