--- a/src/app/auth/approve-entry/approve-entry.component.html
+++ b/src/app/auth/approve-entry/approve-entry.component.html
@@ -1,5 +1,5 @@
 <ngx-spinner type="ball-scale-multiple"></ngx-spinner>
-<ng-container *ngIf="showContainer">
+<ng-container *ngIf="showContainer else showImagen">
   <div class="flex h-screen">
     <div class="m-auto border-solid border-2 border-green-500">
       <div class="p-5">
@@ -17,3 +17,6 @@
     </div>
   </div>
 </ng-container>
+<ng-template #showImagen>
+  <img class="w-full h-full" ngSrc="./assets/img/04-beneficio.png" alt="" fill>
+</ng-template>
