--- a/src/app/management/beneficio/components/cerrar-confirmar-cuenta/cerrar-confirmar-cuenta.component.html
+++ b/src/app/management/beneficio/components/cerrar-confirmar-cuenta/cerrar-confirmar-cuenta.component.html
@@ -2,8 +2,8 @@
 <mat-dialog-content>
   <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">{{title}} Cuenta
   </h1>
-  <form [formGroup]="form" class="space-y-4 md:space-y-6">
-    <mat-label class="block text-sm font-medium text-gray-900 dark:text-white">Ingrese No. Cuenta</mat-label>
+  <form [formGroup]="form" class="space-y-4 md:space-y-6 font-black">
+    <mat-label class="block text-sm font-medium text-gray-900 dark:text-white">No. Cuenta</mat-label>
     <mat-form-field appearance="outline" class="w-full uppercase">
       <input matInput type="text" class="outline-0 focus:ring-0 text-center" maxlength="25" formControlName="noCuenta">
     </mat-form-field>
